# userstory3

./: .gitignore  FIXES_SUMMARY.md  MAVEN_INTEGRATION_SUMMARY.md  README.md  activate_env.sh  audit_logger.py  audit_viewer.py  backup.txt  extract_dependencies.py  extracting_dependencies.py  github_mcp_client.py  github_mcp_server.py  llm_response_extraction.py  pr_watcher.py  requirements.txt  server.py  step2_select_pr.py  step3_regenerate.py  step3_regenerate.py.bak  step4_commit.py  test_build_agent.py  test_build_agent_fixed.py  test_build_agent_scenario.py  test_webhook_payload.json  webhook_server.py
ai_refine/: README.md  crewai_mcp_example.py  github_server.py  mcp_config.json  pyproject.toml
ai_refine/src/ai_refine/: crew.py  main.py
ai_refine/src/ai_refine/config/: agents.yaml  tasks.yaml
correctBackend/: pom.xml
json_output/: audit_log.json  (+2 more)
pipeline/: README.md  github_server.py  pyproject.toml
pipeline/src/: refined_code_output.json
pipeline/src/pipeline/: collect_files.py  main.py  response_extraction.py  webhook_server.py
pipeline/src/pipeline/crews/local_processing_crew/: local_crew.py
pipeline/src/pipeline/crews/local_processing_crew/config/: agents.yaml  tasks.yaml
pipeline/src/pipeline/crews/local_processing_crew/tools/: build_tool.py  file_tool.py  git_tool.py
pipeline/src/pipeline/crews/poem_crew/: poem_crew.py
pipeline/src/pipeline/crews/poem_crew/config/: agents.yaml  tasks.yaml
pipeline/src/pipeline/crews/refine_crew/: refine_crew.py
pipeline/src/pipeline/crews/refine_crew/config/: agents.yaml  tasks.yaml
(+14 files in other folders)
