[project]
name = "pipeline"
version = "0.1.0"
description = "pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "mcp>=1.12.0",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.1",
]

[project.scripts]
kickoff = "pipeline.main:kickoff"
run_crew = "pipeline.main:kickoff"
plot = "pipeline.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
